[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.21.1"]

[project]
name = "quick-key"
requires-python = ">=3.10"
version = "0.0.1"

[tool.hatch.build.targets.wheel]
packages = ["src/quick_key"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
ignore = [
  "D",
  "S", 
  "TD",
  "FIX",  
  "E501",
  "INP",
  "T201",
  "E741",
  "C",
  "PLR",
]
select = ["ALL"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
